# kcppZadania

./: LBitoweOperatoryLogiczneSingleVariable.cpp  LManipulacjaStrumieniemCout.cpp  LStringStream.cpp  ZadAdresowaniePamieci.cpp  ZadArytmetykaWskaznikow.cpp  ZadArytmetykaWskaznikowTablica2D.cpp  ZadCandCPP.cpp  ZadCinCoutFile.cpp  ZadClass.cpp  ZadClassExample.cpp  ZadClassStructure.cpp  ZadEnumExample.cpp  ZadFriends.cpp  ZadIq.cpp  ZadMainExample.cpp  ZadMetodyAbstrakcyjne.cpp  ZadOperatoryPrzypisania.cpp  ZadParzysta.cpp  ZadParzystaCase.cpp  ZadPetle.cpp  ZadPreprocesor.cpp  ZadPreprocesorBezDyrektyw.cpp  ZadPrzekazywanieTablic.cpp  ZadPrzekazywanieTablicKopia.cpp  ZadStringExample.cpp  ZadStruct.cpp  ZadSwitch.cpp  ZadUnia.cpp  ZadZwracanie.cpp  aaa.txt
ZadClassKcpp/: example.txt  main.cc
ZadClassKcpp/include/: Menu.h  MethodsCollection.h
ZadKcppZaliczenie/ZadClassKcpp/: main.cc
ZadKcppZaliczenie/ZadClassKcpp/include/: ZadKcpp.h
ZadKcppZaliczenie/ZadClassKcpp/src/: MethodsCollections.cc
ZadKcppZaliczenie/ZadClassKcppCMake/: CMakeLists.txt  main.cc
ZadKcppZaliczenie/ZadClassKcppCMake/src/: Menu.cc
ZadKcppZaliczenie/ZadKcppZaliczenieCMake/: CMakeLists.txt
ZadKcppZaliczenie/ZadKcppZaliczenieCMake/include/: Menu.h
ZadKcppZaliczenie/ZadKcppZaliczenieCMake/src/: Menu.cc  ZadKcpp.cc
